First try to stop collapsing of the Address bar on Chrome

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   background-color: #1a202c;
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
 }
 ::-webkit-scrollbar {
   width: 14px;
